k8s/Day-9 ingress-controller-nginx/app/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - thlinux.devopsmt.com.br
    secretName: thlinux.devopsmt-tls
  rules:
  - host: thlinux.devopsmt.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: giropops-senhas
            port:
              number: 5000
